# chain-privacy-hfl-artifact

./: README.md  pyproject.toml  reanme  requirements.txt
configs/: cifar10.yaml  femnist.yaml  synthetic.yaml
docs/: ARTIFACT.md  REVIEWER_GUIDE.md
scripts/: make_plots.sh  reproduce_all.sh  run_cifar10.sh  run_femnist.sh
src/cpa_lppf/: __init__.py  cli.py  config.py
src/cpa_lppf/analysis/: plot_paper_figures.py  summarize_results.py
src/cpa_lppf/attacks/: __init__.py  base.py  cpa.py  dlg.py  gismn.py  property_inference.py
src/cpa_lppf/data/: __init__.py  datasets.py  partition.py  synthetic.py
src/cpa_lppf/defenses/: __init__.py  awdp_fl.py  base.py  crsa.py  dp_fedavg.py  lgs.py  lppf.py  par.py  secure_aggregation.py  shp.py
src/cpa_lppf/experiments/: ablation_lppf.py  common.py  run_attack.py  run_cross_dataset.py  run_defense_matrix.py
src/cpa_lppf/hfl/: __init__.py  aggregation.py  client.py  edge.py  secret_sharing.py  server.py  trainer.py
src/cpa_lppf/models/: __init__.py  cnn.py  privacy_discriminator.py  split_model.py
src/cpa_lppf/utils/: logging.py  metrics.py  plotting.py  seed.py  serialization.py
tests/: test_config.py  test_sanitize.py  test_secret_sharing.py
